--- a/midterm/about/index.html
+++ b/midterm/about/index.html
@@ -13,15 +13,19 @@
     <script src="js/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
-	<div class="container clearfix content">
+	<header class="container clearfix content">
 		<div class="grid_12">
-			<h1 id="name"><a href="../index.html">hey, you over there</a></h1>
+            <h1 id="name"><a href="../index.html">hey, you over there</a></h1>
+        </div>
+    </header>
+    <main class="container clearfix content">
+		<div class="grid_8">
 			<p class="alpha long lgr">hello. hi. thanks for being here.  i'm daniel and this is a site about me and the work that i do. if you've stumbled here, then chances are you saw and liked what i got</p>
 			<p class="long lgr">i am first and foremost a video editor and designer. while i'm mostly interested by the viscerally stimulating, i also like traditional art and math and science, especially physics, and when they intermingle into a unified whole.</p>
 			<p class="long lgr">my deal is that i like weird, niche stuff. if u ask me to make a design, i'll probably want to put on a guitar or something because i like to build guitars.</p>
 			<p class="long lgr linklessInSeattle">whatever it is, you can reach me at <a href="mailto:dyhl@nyu.edu" target="_top">dyhl@nyu.edu</a> or you can download my resume <a href="resume.pdf" download>here</a>.</p>	
 			</p>
 		</div>
-	</div>
+	</main>
 </body>
 </html>
