--- a/midterm/index.html
+++ b/midterm/index.html
@@ -15,12 +15,12 @@
 </head>
 
 <body>
-    <div class="container clearfix content">
+    <header class="container clearfix content">
         <div class="grid_12">
             <h1 id="name">daniel li</h1>
             <h2 id="sub">graphic design and visual arts</h2>
         </div>
-    </div>
+    </header>
     <main class="container clearfix content">
         <figure class="grid_12">
             <a href="portfolio/index.html">
