--- a/midterm/portfolio/index.html
+++ b/midterm/portfolio/index.html
@@ -21,57 +21,122 @@
     <main class="container clearfix content">
         <div class="grid_12 cluster alpha">
             <h2>2d animation</h2>
-            <div class="grid_4 port-elements">
-                <div class="view">
-                    <img width="300" height="300" src="../img/pizzapie.jpg">
-                    <a href="#item">
-                        <div class="mask" id="pizza-pie">
-                            <h3>pizza pie</h3>
-                            <p>just your average slacker comedy about two suburban dudes</p>
-                        </div>
-                    </a>
-                </div>
+        </div>
+        <div class="grid_4 max-w">
+            <div class="view">
+                <img width="300" height="300" src="../img/pizzapie.jpg">
+                <a href="#item">
+                    <div class="grad" id="pizza-pie">
+                        <h3>pizza pie</h3>
+                        <p>just your average slacker comedy about two suburban dudes</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="grid_4 max-w">
+            <div class="view">
+                <img width="300" height="300" src="../img/color/6.jpg">
+                <a href="#item">
+                    <div class="grad" id="">
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="grid_4 max-w">
+            <div class="view">
+                <img width="300" height="300" src="../img/color/5.jpg">
+                <a href="#item">
+                    <div class="grad" id="">
+                    </div>
+                </a>
             </div>
         </div>
         <div class="grid_12 cluster">
-            <h2>graphic design</h2>
-            <div class="grid_4 port-elements">
-                <div class="view">
-                    <img width="300" height="300" src="../img/draft.png">
-                    <a href="#item">
-                        <div class="mask" id="draft">
-                            <h3>draft</h3>
-                            <p>logo design for visual foundations studio</p>
-                        </div>
-                    </a>
-                </div>
+            <h2>video</h2>
+        </div>
+        <div class="grid_4 max-w">
+            <div class="view">
+                <img width="300" height="300" src="../img/endorphinia.jpg">
+                <a href="#item">
+                    <div class="grad" id="endorphinia">
+                        <h3>endorphinia</h3>
+                        <p>blacklight: retribution frag movie</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="grid_4 max-w">
+            <div class="view">
+                <img width="300" height="300" src="../img/guiltetv.jpg">
+                <a href="#item">
+                    <div class="grad" id="guilte">
+                        <h3>by omission</h3>
+                        <p>commissioned bl:r frag movie for guiltetv</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="grid_4 max-w">
+            <div class="view">
+                <img width="300" height="300" src="../img/color/7.jpg">
+                <a href="#item">
+                    <div class="grad" id="">
+                    </div>
+                </a>
             </div>
         </div>
         <div class="grid_12 cluster">
             <h2>photography</h2>
-            <div class="grid_4 port-elements">
-                <div class="view">
-                    <img src="../img/color/3.jpg" alt="nothing here" width="300" height="300">
-                    <a href="#item">
-                        <div class="mask" id="dusty-winters">
-                            <h3>dusty winters</h3>
-                            <p>a collection of photos from the great northern</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="grid_4 port-elements">
-                <div class="view">
-                    <img width="300" height="300" src="../img/color/4.jpg">
-                    <a href="#item">
-                        <div class="mask" id="fsdf">
-                            <h3>few stories of a deserted forest</h3>
-                            <p>a collection of photos of China</p>
-                        </div>
-                    </a>
-                </div>
+        </div>
+        <div class="grid_4 max-w">
+            <div class="view">
+                <img src="../img/color/3.jpg" alt="nothing here" width="300" height="300">
+                <a href="#item">
+                    <div class="grad" id="dusty-winters">
+                        <h3>dusty winters</h3>
+                        <p>a collection of photos from the great northern</p>
+                    </div>
+                </a>
             </div>
         </div>
+        <div class="grid_4 max-w">
+            <div class="view">
+                <img width="300" height="300" src="../img/color/4.jpg">
+                <a href="#item">
+                    <div class="grad" id="fsdf">
+                        <h3>few stories of a deserted forest</h3>
+                        <p>a collection of photos of China</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="grid_4 max-w">
+            <div class="view">
+                <img width="300" height="300" src="../img/color/9.jpg">
+                <a href="#item">
+                    <div class="grad" id="">
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="grid_12 cluster">
+            <h2>graphic design</h2>
+        </div>
+        <div class="grid_4 max-w">
+            <div class="view">
+                <img width="300" height="300" src="../img/draft.png">
+                <a href="#item">
+                    <div class="grad" id="draft">
+                        <h3>draft</h3>
+                        <p>logo design for visual foundations studio</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+
+
+
         <div id="item" class="modal-window">
             <div>
                 <a href="#close" class="close">×</a>
